# oxieml-star

./: .gitignore  3d_interactive.html  AUDIT_20260711_oriented_bell.md  CHANGELOG.md  CORRECTIONS.md  Cargo.toml  FINDINGS_20260522.md  FINDINGS_20260522_optics.md  FINDINGS_20260522_penning.md  FINDINGS_20260523.md  FINDINGS_20260523_b2_calibration.md  FINDINGS_20260523_b2_shear.md  FINDINGS_20260523_emlstar_definition.md  FINDINGS_20260523_joukowski.md  FINDINGS_20260523_mixte_calib.md  FINDINGS_20260523_mixte_recert.md  FINDINGS_20260523_penning.md  FINDINGS_20260524_emergence.md  FINDINGS_20260524_vla.md  FINDINGS_20260525_dbar_voieA.md  FINDINGS_20260525_landau.md  FINDINGS_20260529_kirsch.md  FINDINGS_20260530_time_chirality.md  FINDINGS_20260530_vortex_overfit.md  FINDINGS_20260601_optical_vortex.md  FINDINGS_20260601_probe_vs_judge.md  FINDINGS_20260601_vortex_N1.md  FINDINGS_20260602_hall_chiral_conjecture.md  FINDINGS_20260602_hasegawa_mima.md  FINDINGS_20260603_aharonov_bohm.md  FINDINGS_20260603_beltrami_detector.md  FINDINGS_20260603_hall_chiral_form.md  FINDINGS_20260603_hasegawa_wakatani_probe.md  FINDINGS_20260604_aharonov_bohm.md  FINDINGS_20260604_hm_clean_form_and_orphans.md  FINDINGS_20260609_gw_lead.md  FINDINGS_20260610_gw_first_run.md  FINDINGS_20260610_rhythm_game.md  FINDINGS_20260610b_gw_pysr_negative.md  FINDINGS_20260610c_bargmann_no_go.md  (+459 more)
_archive_invalidated/: README.md  detect_mock_Emode_Bmode_result.json  detect_mock_Emode_psf_result.json  detect_mock_Emode_pure_result.json  eml_star_galaxy_paper.tex  eml_star_paper_draft2.md  (+1 more)
src/: error.rs  (+23 more)
(+342 files in other folders)
